helidon-nima-client/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: helidon-nima-client
  labels:
    app: helidon-nima-client
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: helidon-nima-client
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: helidon-nima-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helidon-nima-client
  template:
    metadata:
      labels:
        app: helidon-nima-client
        version: v1
    spec:
      containers:
        - name: helidon-nima-client
          image: nrt.ocir.io/orasejapan/shukawam/helidon-nima-client:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8080
          resources:
            requests:
              cpu: 0.1
              memory: 500M
            limits:
              cpu: 0.2
              memory: 500M
            
      imagePullSecrets:
        - name: ocir-secret
